# py-mono-agent

./: .gitignore  README.md  pi_logger.py  pyproject.toml
pi_agent_core/: agent.py  agent_loop.py  types.py
pi_ai/: config.py  llm.py  llm.yaml.example  model_router.py  qwen_request_template.json  types.py
pi_ai/prompts/: __init__.py
pi_ai/prompts/qwen_tools/: __init__.py  builder.py  models.py  native_fewshots.md  native_rules.md  shared_rules.md  text_fewshots.md  text_rules.md
pi_code_agent/: __init__.py  cli.py  prompt_builder.py  resources.py  session.py  session_store.py  settings.py  tool_registry.py  tools.py
qwen-provider-api/: SKILL.md
qwen-provider-api/references/: pi-mono-integration-notes.md  pi-mono-qwen-provider-template.ts
tests/: test_agent_context_memory.py  test_agent_loop_safety.py  test_agent_session.py  test_coding_tools.py  test_qwen_prompt_builder.py  test_qwen_provider.py
